--- a/ros2_ws/src/robot_control/CMakeLists.txt
+++ b/ros2_ws/src/robot_control/CMakeLists.txt
@@ -1,41 +1,40 @@
 cmake_minimum_required(VERSION 3.8)
 project(robot_control)
 
+# Compile options for warnings
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+include_directories("../../../Shared/Include")
 
-# find dependencies
+
+# Dependencies
 find_package(ament_cmake REQUIRED)
-
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(robot_interfaces REQUIRED)
-#find_package(robot_interfaces REQUIRED)
 
+# Executable
+add_executable(robot_control_node src/robot_control_node.cpp)
 
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+# Link dependencies
+ament_target_dependencies(robot_control_node
+        rclcpp
+        geometry_msgs
+        robot_interfaces
+)
 
-add_executable(hello_world src/hello_world.cpp)
-ament_target_dependencies(hello_world geometry_msgs rclcpp robot_interfaces)
-
-
+# Install target
 install(TARGETS
-        hello_world
-        DESTINATION lib/${PROJECT_NAME})
+        robot_control_node
+        DESTINATION lib/${PROJECT_NAME}
+)
 
-
+# Enable testing (optional)
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
